# stock-bot

./: .env.example  .gitignore  LICENSE  README.md  dependencies.py  main.py  pyproject.toml  scheduler.py
alembic/: env.py
alembic/versions/: 01decfad1312_added_stockreport_table.py  16b5d1edf061_init_db_and_vector.py  3b3f6244d4de_add_subscribes_cascade.py  44beddce0253_news_db_edited.py  4bce1f1fe6f8_init.py  5f6b883c9830_v0_0_1.py  75e4f4e27242_fix_db.py  7824bf0c33a3_stock_news_unique_column_update.py  85b86fdb36ce_changed_subscription_id_name.py  9664c4b65172_add_subscribes_created_at.py  ae571f60eb6e_news_db.py  cd54a32cc032_init.py  eff0ff1b092b_update_subscribes_and_relations_with_.py  ff5c26b61661_add_chunk_cascading.py
analysis/: llm_module.py  prompt_manager.py
analysis/prompts/: bearish_agent.md  bullish_agent.md  fact_extractor.md  fact_parser.md  moderator_agent.md  report_agent.md
bot/: telegram.py
collectors/: news_api.py  stock_api.py
collectors/interfaces/: __init__.py  news_interface.py  stock_interface.py
db/: connection.py  db_module.py  models.py  provider.py  stock_model.py
db/repositories/: base.py  report_repository.py  stock_repository.py  user_repository.py
db/repositories/admin/: admin_repository.py
interfaces/: __init__.py  bot_interface.py  db_interface.py  news_interface.py  stock_interface.py  stockinterface.py
jobs/: __init__.py  stock_collector.py
llm_tools/: __init__.py  stock_tools.py
routers/: admin.py  v1.py
schemas/: __init__.py  langchain.py  llm.py  stock.py  user.py
services/: llm_service.py  stock_data_service.py  user_data_service.py
utils/: common.py  formatter.py
