[project]
name = "stock-bot"
version = "0.1.1"
description = "주식 데이터와 뉴스를 수집하고, LLM 기반 투자 리포트를 생성해 텔레그램과 API로 제공하는 자동화 서비스"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "edgartools[ai]>=5.0.2",
    "fastapi>=0.124.0",
    "langchain>=1.1.2",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.1",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.1.7",
    "pgvector>=0.4.2",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "python-telegram-bot[job-queue]>=22.5",
    "sqlalchemy[asyncio]>=2.0.44",
    "trafilatura>=2.0.0",
    "uvicorn[standard]>=0.38.0",
    "yfinance>=0.2.66",
]
